--- a/build.gradle
+++ b/build.gradle
@@ -3,17 +3,21 @@ plugins {
 }
 
 repositories {
-    jcenter()
+    mavenCentral()
     maven { url 'https://papermc.io/repo/repository/maven-public/' }
     maven { url "https://repo.dmulloy2.net/repository/public/" }
     mavenLocal()
 }
 
 dependencies {
-    compileOnly 'com.destroystokyo.paper:paper-api:1.16.5-R0.1-SNAPSHOT'
-    compileOnly 'com.comphenix.protocol:ProtocolLib:4.6.0'
+    compileOnly 'io.papermc.paper:paper-api:1.19.2-R0.1-SNAPSHOT'
+    compileOnly 'com.comphenix.protocol:ProtocolLib:4.8.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+}
+
+java {
+    toolchain.languageVersion.set(JavaLanguageVersion.of(17))
 }
 
 tasks.named('test') {
